--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas==1.3.3
-numpy==1.21.0
-scikit-learn==0.24.2
-xgboost==1.4.2
-streamlit==1.2.0
-joblib==1.0.1
-matplotlib==3.4.2
-seaborn==0.11.1
+numpy>=1.22.0
+pandas>=1.3.3
+scikit-learn>=0.24
+xgboost>=1.5.1
+streamlit>=1.10
+matplotlib>=3.5
+seaborn>=0.11
+joblib>=1.0
