--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-numpy>=1.22.0
-pandas>=1.3.3
-scikit-learn>=0.24
-xgboost>=1.5.1
-streamlit>=1.10
-matplotlib>=3.5
-seaborn>=0.11
-joblib>=1.0
+numpy
+pandas
+scikit-learn
+xgboost
+streamlit
+matplotlib
+seaborn
